# openrattler

./: .gitignore  LICENSE  PROGRESS.md  pyproject.toml
.claude/: BUILD_GUIDE.md  PROGRESS.md
openrattler/: __init__.py  __main__.py  startup.py
openrattler/agents/: __init__.py  creator.py  creator_validator.py  runtime.py  templates.py
openrattler/channels/: __init__.py  base.py  cli_adapter.py  email_adapter.py  slack_adapter.py  sms_adapter.py
openrattler/cli/: chat.py  main.py
openrattler/config/: __init__.py  loader.py  profiles.py
openrattler/gateway/: __init__.py  auth.py  router.py  scheduler.py  server.py
openrattler/identity/: __init__.py  loader.py
openrattler/mcp/: __init__.py  bridge.py  connection.py  manager.py
openrattler/models/: __init__.py  agents.py  audit.py  errors.py  mcp.py  messages.py  sessions.py  social.py  tools.py
openrattler/processors/: __init__.py  base.py  social_secretary.py
openrattler/security/: approval.py  command_filter.py  memory_security.py  patterns.py  rate_limiter.py  sanitize.py  validator.py
openrattler/storage/: __init__.py  audit.py  memory.py  social.py  transcripts.py
openrattler/tools/: __init__.py  executor.py  permissions.py  registry.py  social_tools.py
tests/: conftest.py  test_smoke.py
tests/test_agents/: test_creator.py  test_providers.py  test_runtime.py  test_templates.py
tests/test_channels/: test_cli_adapter.py  test_email_adapter.py  test_slack_adapter.py  test_sms_adapter.py
tests/test_cli/: test_chat.py  test_init.py
tests/test_config/: test_loader.py  test_profiles.py
(+53 files in other folders)
